k8s/backstage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage-demo
  labels:
    name: backstage-demo
    demo.minikube: "true"
    demo.component: namespace
    app.kubernetes.io/name: backstage-demo
    app.kubernetes.io/part-of: backstage-openwebui-demo
  annotations:
    demo.minikube/optimized: "true"
    demo.minikube/description: "Namespace para demo Backstage + OpenWebUI"
